syntax = "proto3";

package personService;

// Service //==================================================================|
service PersonService
{
	rpc GetPerson (GetPersonRequest) returns (GetPersonResponse) {}
}

// Requests //=================================================================|
message GetPersonRequest
{
	int32				person_id = 1;
};

// Responses //================================================================|
message GetPersonResponse
{
	repeated Person		persons = 1;
};

// Classes, Types //===========================================================|
enum PhoneType
{
	NONE = 0;
	STATIONARY = 1;
	CELLULAR = 2;
	OTHER = 3;
};

message Phone
{
	string				number = 1;
	PhoneType			type = 2;
};

message Person {
	int32				id = 1;
	string				name = 2;
	repeated Phone		phones = 3;
};
